Working on the API endpoints

--- a/ws/composer.json
+++ b/ws/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4|^8.0",
         "ext-zip": "*",
         "ankitpokhrel/tus-php": "^2.0",
         "fideloper/proxy": "^4.4",
@@ -19,16 +19,18 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
-        "pda/pheanstalk": "~4.0"
+        "pda/pheanstalk": "~4.0",
+        "ext-json": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "roave/security-advisories": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
