--- a/gui/package.json
+++ b/gui/package.json
@@ -290,6 +290,7 @@
     "cpy": "^8.1.1",
     "dockerode": "^3.2.1",
     "electron-debug": "^3.1.0",
+    "electron-dl": "^3.0.2",
     "electron-log": "^4.2.4",
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.4",
@@ -317,6 +318,7 @@
     "styled-components": "^5.2.1",
     "ts-debounce": "^2.1.0",
     "tsyringe": "^4.4.0",
+    "tus-js-client": "^2.2.0",
     "uniqid": "^5.2.0"
   },
   "devEngines": {
