Working on the default layout of the app

--- a/gui/package.json
+++ b/gui/package.json
@@ -187,6 +187,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/styled-components": "^5.1.7",
     "@types/uniqid": "^5.2.0",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -257,7 +258,10 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.2",
+    "@mui-treasury/components": "^1.9.2",
     "@mui-treasury/layout": "^4.5.0",
+    "@mui-treasury/mockup": "^1.2.10",
+    "@mui-treasury/styles": "^1.13.1",
     "axios": "^0.21.0",
     "check-internet-connected": "^2.0.5",
     "cp-file": "^9.0.0",
