--- a/gui/package.json
+++ b/gui/package.json
@@ -263,6 +263,7 @@
     "@mui-treasury/mockup": "^1.2.10",
     "@mui-treasury/styles": "^1.13.1",
     "axios": "^0.21.0",
+    "byte-size": "^7.0.0",
     "check-internet-connected": "^2.0.5",
     "clsx": "^1.1.1",
     "cp-file": "^9.0.0",
@@ -274,6 +275,7 @@
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.4",
     "electron-util": "^0.14.2",
+    "file-type": "^16.1.0",
     "find-free-port": "^2.0.0",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
