--- a/scripts/app/container/conf/supervisord.conf
+++ b/scripts/app/container/conf/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [include]
-files=/etc/supervisor/conf.d/supervisord-apache2.conf /etc/supervisor/conf.d/supervisord-mysqld.conf /etc/supervisor/conf.d/supervisord-beanstalkd.conf ; /etc/supervisor/conf.d/supervisord-worker.conf ; TODO: enable for production
+files=/etc/supervisor/conf.d/supervisord-apache2.conf /etc/supervisor/conf.d/supervisord-mysqld.conf /etc/supervisor/conf.d/supervisord-beanstalkd.conf /etc/supervisor/conf.d/supervisord-worker.conf
 
 ; https://github.com/Supervisor/supervisor/issues/376#issuecomment-404385767
 
