--- a/gui/package.json
+++ b/gui/package.json
@@ -293,6 +293,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
