--- a/scripts/app/container/Dockerfile
+++ b/scripts/app/container/Dockerfile
@@ -79,13 +79,14 @@ ADD conf/supervisord-beanstalkd.conf                /etc/supervisor/conf.d/super
 ADD conf/supervisord-worker.conf                    /etc/supervisor/conf.d/supervisord-worker.conf
 ADD conf/supervisord.conf                           /etc/supervisor/supervisord.conf
 ADD conf/mysqld_innodb.cnf                          /etc/mysql/conf.d/mysqld_innodb.cnf
-ADD databases/Disease.txt                           /Disease.txt
-ADD databases/disease_list.txt                      /disease_list.txt
-ADD databases/Drug_food.txt                         /Drug_food.txt
-ADD databases/hg19/pharm_database_hg19.txt          /pharm_database_hg19.txt
-ADD databases/hg19/cgi_original_hg19.txt            /cgi_original_hg19.txt
-ADD databases/hg38/pharm_database_hg38.txt          /pharm_database_hg38.txt
-ADD databases/hg38/cgi_original_hg38.txt            /cgi_original_hg38.txt
+ADD databases                                       /databases
+#ADD databases/Disease.txt                           /Disease.txt
+#ADD databases/disease_list.txt                      /disease_list.txt
+#ADD databases/Drug_food.txt                         /Drug_food.txt
+#ADD databases/pharm_database_hg19.txt               /pharm_database_hg19.txt
+#ADD databases/cgi_original_hg19.txt                 /cgi_original_hg19.txt
+#ADD databases/pharm_database_hg38.txt               /pharm_database_hg38.txt
+#ADD databases/cgi_original_hg38.txt                 /cgi_original_hg38.txt
 ADD oncoreport/CreateCivicBed.R                     /CreateCivicBed.R
 ADD oncoreport/CreateReport.R                       /CreateReport.R
 ADD oncoreport/Functions.R                          /Functions.R
