Fixing problems caused by integration of userinterface branch

--- a/gui/src/package.json
+++ b/gui/src/package.json
@@ -15,6 +15,7 @@
   },
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
+    "dockerode": "^3.2.1",
     "@mui-treasury/components": "^1.9.2",
     "@mui-treasury/styles": "^1.13.1",
     "@mui-treasury/mockup": "^1.2.10"
