--- a/gui/package.json
+++ b/gui/package.json
@@ -163,6 +163,8 @@
     "@babel/plugin-proposal-numeric-separator": "^7.12.7",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-proposal-pipeline-operator": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.15.4",
     "@babel/plugin-proposal-throw-expressions": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
@@ -270,7 +272,6 @@
     "clsx": "^1.1.1",
     "cp-file": "^9.0.0",
     "cpy": "^8.1.1",
-    "dockerode": "^3.2.1",
     "electron-debug": "^3.1.0",
     "electron-dl": "^3.0.2",
     "electron-log": "^4.2.4",
