--- a/gui/package.json
+++ b/gui/package.json
@@ -188,6 +188,7 @@
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.7",
     "@types/uniqid": "^5.2.0",
@@ -296,6 +297,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.0",
+    "react-swipeable-views": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
