--- a/ws/composer.json
+++ b/ws/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "ext-json": "*",
         "ext-zip": "*",
         "ankitpokhrel/tus-php": "^2.0",
+        "f9webltd/laravel-api-response-helpers": "^1.5",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -19,8 +21,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
-        "pda/pheanstalk": "~4.0",
-        "ext-json": "*"
+        "pda/pheanstalk": "~4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
