--- a/gui/package.json
+++ b/gui/package.json
@@ -273,6 +273,7 @@
     "clsx": "^1.1.1",
     "cp-file": "^9.0.0",
     "cpy": "^8.1.1",
+    "dayjs": "^1.10.7",
     "electron-debug": "^3.1.0",
     "electron-dl": "^3.0.2",
     "electron-log": "^4.2.4",
