Building the new API connector

--- a/gui/package.json
+++ b/gui/package.json
@@ -190,6 +190,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-swipeable-views": "^0.13.1",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/sprintf-js": "^1.1.2",
     "@types/styled-components": "^5.1.7",
     "@types/uniqid": "^5.2.0",
     "@types/webpack-env": "^1.15.2",
@@ -302,6 +303,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
+    "sprintf-js": "^1.1.2",
     "styled-components": "^5.2.1",
     "ts-debounce": "^2.1.0",
     "tsyringe": "^4.4.0",
