--- a/gui/package.json
+++ b/gui/package.json
@@ -257,10 +257,12 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.2",
     "@mui-treasury/components": "^1.9.2",
     "@mui-treasury/layout": "^4.5.0",
