--- a/scripts/app/container/conf/supervisord-cloud.conf
+++ b/scripts/app/container/conf/supervisord-cloud.conf
@@ -1,7 +1,7 @@
 [supervisord]
 
 [include]
-files=/etc/supervisor/conf.d/supervisord-apache2.conf /etc/supervisor/conf.d/supervisord-mysqld.conf /etc/supervisor/conf.d/supervisord-beanstalkd.conf /etc/supervisor/conf.d/supervisord-worker.conf
+files=/etc/supervisor/conf.d/supervisord-apache2.conf /etc/supervisor/conf.d/supervisord-beanstalkd.conf /etc/supervisor/conf.d/supervisord-worker.conf
 
 [unix_http_server]
 file=/var/run/supervisor.sock
