--- a/gui/src/package.json
+++ b/gui/src/package.json
@@ -1,13 +1,13 @@
 {
   "name": "oncoreport",
-  "productName": "OncoReport",
+  "productName": "Oncoreport",
   "version": "0.0.1",
   "description": "A pipeline for the annotation and clinical reporting of DNA-seq data",
   "main": "./main.prod.js",
   "author": {
     "name": "Salvatore Alaimo",
     "email": "salvatore.alaimo@unict.it",
-    "url": "https://alaimos.tech"
+    "url": "https://alaimos.com"
   },
   "scripts": {
     "electron-rebuild": "node -r ../.erb/scripts/BabelRegister.js ../.erb/scripts/ElectronRebuild.js",
