fix: build issues

--- a/gui/package.json
+++ b/gui/package.json
@@ -8,7 +8,7 @@
     "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.babel.js",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
-    "package": "yarn build && electron-builder build -mwl --publish never",
+    "package": "yarn build && electron-builder build -mwl --x64 --arm64 --publish never",
     "postinstall": "node -r @babel/register .erb/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.babel.js && opencollective-postinstall && yarn-deduplicate yarn.lock",
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && cross-env yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
@@ -45,10 +45,6 @@
       "target": [
         "zip"
       ],
-      "arch": [
-        "x64",
-        "arm64"
-      ],
       "type": "distribution",
       "hardenedRuntime": true,
       "entitlements": "assets/entitlements.mac.plist",
@@ -72,9 +68,6 @@
     "win": {
       "target": [
         "nsis"
-      ],
-      "arch": [
-        "x64"
       ]
     },
     "linux": {
@@ -82,10 +75,6 @@
         "AppImage",
         "deb",
         "tar.gz"
-      ],
-      "arch": [
-        "x64",
-        "arm64"
       ],
       "category": "ComputerScience"
     },
