fix: wrong font assets path in the packages CSS files

--- a/gui/package.json
+++ b/gui/package.json
@@ -74,7 +74,9 @@
       "target": [
         "AppImage",
         "deb",
-        "tar.gz"
+        "rpm",
+        "tar.gz",
+        "pacman"
       ],
       "category": "ComputerScience"
     },
