--- a/scripts/app/container/conf/mysqld_innodb.cnf
+++ b/scripts/app/container/conf/mysqld_innodb.cnf
@@ -4,5 +4,4 @@ innodb_flush_method=O_DSYNC
 innodb-use-native-aio=0
 log_bin=ON
 bind-address=0.0.0.0
-log
-log-error
+general_log_file=/tmp/mysql_general.log
